merge scalar and vector tests