@@ -44,6 +44,7 @@ public class TestConditionalMove {
     private static final Random RANDOM = Utils.getRandomInstance();
 
     public static void main(String[] args) {
+        // Vectorizaion: +UseCMoveUnconditionally, +UseVectorCmov
         // Cross-product: +-AlignVector and +-UseCompactObjectHeaders
         TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector");
@@ -53,6 +54,12 @@ public class TestConditionalMove {
                                    "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector");
         TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector");
+
+        // Scalar: +UseCMoveUnconditionally, -UseVectorCmov
+        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:-UseVectorCmov",
+                                   "-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders");
+        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:-UseVectorCmov",
+                                   "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders");
     }
 
     // Compare 2 values, and pick one of them
@@ -565,6 +572,7 @@ public class TestConditionalMove {
         return (a > b) ? c : d;
     }
 
+    // Double comparison
     private int cmoveDGTforI(double a, double b, int c, int d) {
         return (a > b) ? c : d;
     }
@@ -587,7 +595,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFGT(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? a[i] : b[i];
@@ -599,7 +613,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFGTSwap(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] > a[i]) ? a[i] : b[i];
@@ -611,7 +631,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFLT(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? a[i] : b[i];
@@ -623,7 +649,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFLTSwap(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] < a[i]) ? a[i] : b[i];
@@ -635,7 +667,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFEQ(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? a[i] : b[i];
@@ -647,7 +685,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDLE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? a[i] : b[i];
@@ -659,7 +703,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDLESwap(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] <= a[i]) ? a[i] : b[i];
@@ -671,7 +721,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDGE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? a[i] : b[i];
@@ -683,7 +739,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDGESwap(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] >= a[i]) ? a[i] : b[i];
@@ -695,7 +757,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDNE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? a[i] : b[i];
@@ -708,7 +776,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? 0.1f : -0.1f;
@@ -720,7 +794,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGEforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? 0.1f : -0.1f;
@@ -732,7 +812,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLTforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? 0.1f : -0.1f;
@@ -744,7 +830,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLEforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? 0.1f : -0.1f;
@@ -756,7 +848,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFEQforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? 0.1f : -0.1f;
@@ -768,7 +866,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFNEQforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? 0.1f : -0.1f;
@@ -780,8 +884,19 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
+        applyIfAnd = {"UseCompactObjectHeaders", "false", "UseVectorCmov", "true"},
         applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                    IRNode.VECTOR_MASK_CMP_F, ">0",
+                    IRNode.VECTOR_BLEND_F, ">0",
+                    IRNode.STORE_VECTOR, ">0"},
+        applyIfAnd = {"AlignVector", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLTforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] < b[i+0]) ? 0.1f : -0.1f;
@@ -798,8 +913,19 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
+        applyIfAnd = {"UseCompactObjectHeaders", "false", "UseVectorCmov", "true"},
         applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                    IRNode.VECTOR_MASK_CMP_F, ">0",
+                    IRNode.VECTOR_BLEND_F, ">0",
+                    IRNode.STORE_VECTOR, ">0"},
+        applyIfAnd = {"AlignVector", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLEforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1f : -0.1f;
@@ -816,7 +942,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, "=0",
                   IRNode.VECTOR_BLEND_F, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFYYforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1f : -0.1f;
@@ -829,7 +961,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, "=0",
                   IRNode.VECTOR_BLEND_F, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFXXforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <  b[i+0]) ? 0.1f : -0.1f;
@@ -842,7 +980,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? 0.1 : -0.1;
@@ -854,7 +998,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGEforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? 0.1 : -0.1;
@@ -866,7 +1016,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLTforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? 0.1 : -0.1;
@@ -878,7 +1034,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLEforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? 0.1 : -0.1;
@@ -890,7 +1052,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDEQforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? 0.1 : -0.1;
@@ -902,7 +1070,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDNEQforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? 0.1 : -0.1;
@@ -914,7 +1088,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLTforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] < b[i+0]) ? 0.1 : -0.1;
@@ -927,7 +1107,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLEforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1 : -0.1;
@@ -940,7 +1126,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, "=0",
                   IRNode.VECTOR_BLEND_D, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDYYforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1 : -0.1;
@@ -953,7 +1145,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, "=0",
                   IRNode.VECTOR_BLEND_D, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDXXforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <  b[i+0]) ? 0.1 : -0.1;
@@ -967,11 +1165,15 @@ public class TestConditionalMove {
     //   do not float down into the branches, I compute a value, and store it to r2 (same as r, except that the
     //   compilation does not know that).
     //   So far, vectorization only works for CMoveF/D, with same data-width comparison (F/I for F, D/L for D).
+    //   TODO: enable CMOVE_I/L verification when it's guaranteed to generate CMOVE_I/L, JDK-8371984.
     //
     // Signed comparison: I/L
     //     I fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -983,6 +1185,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -994,6 +1199,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1005,6 +1213,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1016,6 +1227,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1027,6 +1241,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1039,6 +1256,9 @@ public class TestConditionalMove {
     //     I fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1050,6 +1270,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1061,6 +1284,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1072,6 +1298,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1083,6 +1312,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1094,6 +1326,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1110,7 +1345,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1126,7 +1367,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1142,7 +1389,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1158,7 +1411,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1174,7 +1433,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1190,7 +1455,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1203,6 +1474,9 @@ public class TestConditionalMove {
     //     I fo D
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1214,6 +1488,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1225,6 +1502,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1236,6 +1516,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1247,6 +1530,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1258,6 +1544,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1270,6 +1559,9 @@ public class TestConditionalMove {
     //     L fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1281,6 +1573,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1292,6 +1587,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1303,6 +1601,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1314,6 +1615,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1325,6 +1629,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1337,6 +1644,9 @@ public class TestConditionalMove {
     //     L fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1348,6 +1658,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1359,6 +1672,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1370,6 +1686,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1381,6 +1700,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1392,6 +1714,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1404,6 +1729,9 @@ public class TestConditionalMove {
     //     L fo F
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1415,6 +1743,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1426,6 +1757,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1437,6 +1771,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1448,6 +1785,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1459,6 +1799,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1475,7 +1818,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLEQforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1492,7 +1841,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLNEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1509,7 +1864,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLGTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1526,7 +1887,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLGEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1543,7 +1910,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLLTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1560,7 +1933,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLLEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1575,6 +1954,9 @@ public class TestConditionalMove {
     //     I fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1586,6 +1968,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1597,6 +1982,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1608,6 +1996,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1619,6 +2010,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1630,6 +2024,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1642,6 +2039,9 @@ public class TestConditionalMove {
     //     I fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1653,6 +2053,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1664,6 +2067,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1675,6 +2081,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1686,6 +2095,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1697,6 +2109,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1713,7 +2128,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1729,7 +2150,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1745,7 +2172,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1761,7 +2194,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1777,7 +2216,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1793,7 +2238,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1806,6 +2257,9 @@ public class TestConditionalMove {
     //     I fo D
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1817,6 +2271,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1828,6 +2285,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1839,6 +2299,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1850,6 +2313,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1861,6 +2327,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1873,6 +2342,9 @@ public class TestConditionalMove {
     //     L fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1884,6 +2356,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1895,6 +2370,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1906,6 +2384,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1917,6 +2398,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1928,6 +2412,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1940,6 +2427,9 @@ public class TestConditionalMove {
     //     L fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1951,6 +2441,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1962,6 +2455,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1973,6 +2469,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1984,6 +2483,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1995,6 +2497,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2007,6 +2512,9 @@ public class TestConditionalMove {
     //     L fo F
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2018,6 +2526,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2029,6 +2540,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2040,6 +2554,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2051,6 +2568,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2062,6 +2582,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2078,7 +2601,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULEQforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2095,7 +2624,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULNEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2112,7 +2647,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULGTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2129,7 +2670,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULGEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2146,7 +2693,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULLTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2163,7 +2716,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULLEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2176,6 +2735,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_F, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforI(float[] a, float[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -2187,6 +2749,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_F, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforL(float[] a, float[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2201,7 +2766,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforF(float[] a, float[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2213,6 +2784,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforD(float[] a, float[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -2224,6 +2798,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_D, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforI(double[] a, double[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -2235,6 +2812,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_D, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforL(double[] a, double[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2246,6 +2826,9 @@ public class TestConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforF(double[] a, double[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2260,7 +2843,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforD(double[] a, double[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -2276,7 +2865,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFCmpCon1(float a, float[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < b.length; i++) {
             float cc = c[i];
@@ -2291,7 +2886,13 @@ public class TestConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFCmpCon2(float[] a, float b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
